<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_list">

    <fragment
        android:id="@+id/navigation_list"
        android:name="com.example.webserviceapplication.ui.list.ListFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_list" >
        <action
            android:id="@+id/action_navigation_list_to_navigation_detail"
            app:destination="@id/navigation_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.example.webserviceapplication.ui.favorite.FavoriteFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_favorite" >
        <action
            android:id="@+id/action_navigation_favorite_to_detailLocalFragment"
            app:destination="@id/detailLocalFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_detail"
        android:name="com.example.webserviceapplication.ui.detail.DetailFragment"
        android:label="@string/detail"
        tools:layout="@layout/fragment_detail" >
        <argument
            android:name="character"
            app:argType="com.example.webserviceapplication.server.modelo.Character" />
        <action
            android:id="@+id/action_navigation_detail_to_navigation_list"
            app:destination="@id/navigation_list" />
    </fragment>
    <fragment
        android:id="@+id/detailLocalFragment"
        android:name="com.example.webserviceapplication.ui.detail.DetailLocalFragment"
        android:label="DetailLocalFragment" >
        <argument
            android:name="localCharacter"
            app:argType="com.example.webserviceapplication.local.model.LocalCharacter" />
        <action
            android:id="@+id/action_detailLocalFragment_to_navigation_favorite"
            app:destination="@id/navigation_favorite" />
    </fragment>

</navigation>